--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: "3"
 
 services:
   geth:
-    image: ethereum/client-go:v1.10.8
+    image: ethereum/client-go
     restart: unless-stopped
     ports:
       - "30303:30303"
       - "30303:30303/udp"
-      - "8545:8545"
-      - "8546:8546"
+      - "7891:7891"
+      - "7892:7892"
     volumes:
       - ./chaindata:/chaindata
     stop_signal: SIGINT
@@ -19,17 +19,16 @@ services:
       - "eth,net,web3"
       - --http.addr=0.0.0.0
       - --http.vhosts=*
+      - --http.port=7891
       - --http.corsdomain=*
       - --ws
       - --ws.origins=*
       - --ws.addr=0.0.0.0
+      - --ws.port=7892
       - --ws.api
       - "eth,net,web3"
-      - --graphql
-      - --graphql.corsdomain=*
-      - --graphql.vhosts=*
       - --datadir
-      - "/chaindata"
+      - "/eth/master"
       # Minimum number of executable transaction slots guaranteed per account (default: 16)
       # - --txpool.accountslots=16
       # Maximum number of non-executable transaction slots for all accounts (default: 1024)
@@ -39,11 +38,11 @@ services:
       # Maximum amount of time non-executable transaction are queued (default: 3h0m0s)
       # - --txpool.lifetime=3h0m0s
       # Megabytes of memory allocated to internal caching (default: 1024)
-      # - --cache=4096
+      - --cache=32768
       # Maximum number of network peers (network disabled if set to 0) (default: 25)
-      # - --maxpeers=100
+      - --maxpeers=150
       # Blockchain sync mode ("fast", "full", or "light")
-      # - --syncmode=fast
+      - --syncmode=fast
       # Blockchain garbage collection mode ("full", "archive") (default: "full")
       # - --gcmode=full
     logging:
