--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -62,9 +62,9 @@ networks:
     testnet:
         driver: macvlan
         driver_opts:
+            com.docker.network.enable_ipv4: "true"
             parent: eth3
         ipam:
             config:
-                - 
-                  subnet: 192.168.2.0/24
+                - subnet: 192.168.2.0/24
                   gateway: 192.168.2.1
