--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -1,4 +1,14 @@
 version: "2.4"
+networks:
+  testnet:
+    driver: macvlan
+    driver_opts:
+      # 宿主机网卡
+      parent: eth3
+    ipam:
+      config:
+        - subnet: 192.168.2.0/24
+          #gateway: 192.168.2.1
 
 services:
   testnet:
