--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "2"
 networks:
-  ntest:
+  ntest50:
     external: true
 
 services:
@@ -13,7 +13,7 @@ services:
       - "7891:7891"
       - "7892:7892"
     networks:
-      - ntest
+      - ntest50
     volumes:
       - /data:/data
     stop_signal: SIGINT
