--- a/initbsc/docker-compose.yml
+++ b/initbsc/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - "/data/bsc/config.toml"
       - --datadir
       - "/data/master"
+      - "init"
+      - "/data/genesis.json"
       # Minimum number of executable transaction slots guaranteed per account (default: 16)
       # - --txpool.accountslots=16
       # Maximum number of non-executable transaction slots for all accounts (default: 1024)
