--- a/initbsc/docker-compose.yml
+++ b/initbsc/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - --ws.api
       - "eth,net,web3"
       - --config
-      - "/data/bsc/config.toml"
+      - "/data/config.toml"
       - --datadir
       - "/data/master"
       - "init"
