--- a/bsc/docker-compose.yml
+++ b/bsc/docker-compose.yml
@@ -14,8 +14,7 @@ services:
     stop_signal: SIGINT
     stop_grace_period: 2m
     command:
-      - --networkid
-      - "56"
+      - --networkid=56
       - --http
       - --http.api
       - "eth,net,web3"
