--- a/bitcoin/docker-compose.yml
+++ b/bitcoin/docker-compose.yml
@@ -3,14 +3,14 @@ services:
   bitcoind:
     image: bitcoinsv/bitcoin-sv
     # specify additional command line arguments here
-    command: bitcoind -testnet -txindex -datadir=/data/bsv
+    command: bitcoind -testnet -txindex
     healthcheck:
       test: ["CMD", "/entrypoint.sh", "bitcoin-cli", "getinfo"]
     ports:
       # change to 18333 if running testnet, or 9333 if running on STN
       - "18333:18333"
     volumes:
-      - /data:/data
+      - /data/bsv:/data
     networks:
       - bitcoin
   # bitcoin-cli:
