--- a/bitcoin/docker-compose.yml
+++ b/bitcoin/docker-compose.yml
@@ -26,14 +26,11 @@ services:
       - DAEMON_URL=http://user:password@127.0.0.1:18332/
       - PEER_DISCOVERY=self
       - DB_DIRECTORY=/data
-      - SERVICES=tcp://:50001,ssl://:50002,wss://:50004,rpc://0.0.0.0:8000
+      - SERVICES=tcp://:50001
     volumes:
       - /eth/electrumx:/data
     ports:
       - "50001:50001" # comment out to disable TCP port (plaintext)
-      - "50002:50002"
-      - "50004:50004"
-      - "8000:8000"
     depends_on:
       - bitcoind
 
