--- a/electrumx/docker-compose.yml
+++ b/electrumx/docker-compose.yml
@@ -3,14 +3,14 @@ services:
   electrumx:
     image: electrumx
     environment:
-      - DAEMON_URL=http://bitcoin:password@0.0.0.0:18333/
+      - DAEMON_URL=http://bitcoin:password@172.18.194.12:18333
       - PEER_DISCOVERY=self
       - DB_DIRECTORY=/data
       - SERVICES=tcp://:50001
     volumes:
       - /eth/electrumx:/data
     ports:
-      - "50001:50001" # comment out to disable TCP port (plaintext)
+      - "172.18.194.12:50001:50001" # comment out to disable TCP port (plaintext)
     links:
       - bitcoind
 
