--- a/electrumx/Dockerfile
+++ b/electrumx/Dockerfile
@@ -14,7 +14,8 @@ RUN apt-get update && \
 RUN cd /electrumx* && python3 setup.py install
 
 ENV SERVICES="tcp://:50001"
-ENV COIN=BitcoinSVTestnet
+ENV COIN=BitcoinSV
+ENV NET=testnet
 ENV ALLOW_ROOT=true
 ENV DB_ENGINE=rocksdb
 ENV MAX_SEND=20000000
