--- a/bitcoin/docker-compose.yml
+++ b/bitcoin/docker-compose.yml
@@ -3,14 +3,14 @@ services:
   bitcoind:
     image: bitcoinsv/bitcoin-sv
     # specify additional command line arguments here
-    command: bitcoind -testnet -txindex -rpcport=18332 -rest -rpcthreads=10 -zmqpubrawtx=tcp://0.0.0.0:28332
+    command: bitcoind -txindex -rpcport=8332 -rest -rpcthreads=10 -zmqpubrawtx=tcp://0.0.0.0:28332
     healthcheck:
       test: ["CMD", "/entrypoint.sh", "bitcoin-cli", "getinfo"]
     ports:
       # change to 18333 if running testnet, or 9333 if running on STN
-      - "172.18.194.12:18332:18332"
-      - "172.18.194.12:18333:18333"
-      - "172.18.194.12:28332:28332"
+      - "172.19.32.22:8332:8332"
+      - "172.19.32.22:8333:8333"
+      - "172.19.32.22:28332:28332"
     volumes:
       - /eth/bsv:/data
   # bitcoin-cli:
