--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       # Maximum number of network peers (network disabled if set to 0) (default: 25)
       - --maxpeers=50
       # Blockchain sync mode ("fast", "full", or "light")
-      - --syncmode=fast
+      - --syncmode=snap
       # Blockchain garbage collection mode ("full", "archive") (default: "full")
       # - --gcmode=full
     logging:
