--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - --http.vhosts=*
       - --http.port=7891
       - --http.corsdomain=*
+      - --gascap=1500000000000
       - --ws
       - --ws.origins=*
       - --ws.addr=0.0.0.0
