--- a/testnet-ctu/docker-compose.yml
+++ b/testnet-ctu/docker-compose.yml
@@ -41,11 +41,11 @@ services:
       # Maximum amount of time non-executable transaction are queued (default: 3h0m0s)
       # - --txpool.lifetime=3h0m0s
       # Megabytes of memory allocated to internal caching (default: 1024)
-      - --cache=8192
+      - --cache=16384
       # Maximum number of network peers (network disabled if set to 0) (default: 25)
       - --maxpeers=50
       # Blockchain sync mode ("fast", "full", or "light")
-      - --syncmode=fast
+      - --syncmode=snap
       # Blockchain garbage collection mode ("full", "archive") (default: "full")
       # - --gcmode=full
     logging:
