--- a/testnet-ctu/docker-compose.yml
+++ b/testnet-ctu/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - --ws.addr=0.0.0.0
       - --ws.port=38892
       - --ws.api
-      - "eth,net,web3"
+      - "eth,net,web3,engine,admin"
       - --datadir
       - "/eth/testnet"
       # Minimum number of executable transaction slots guaranteed per account (default: 16)
