--- a/testnet-ctu/docker-compose.yml
+++ b/testnet-ctu/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     stop_grace_period: 2m
     command:
       - --port=30304
-      - --goerli
+      - --ropsten
       - --http
       - --http.api
       - "eth,net,web3"
