--- a/ctu/docker-compose.yml
+++ b/ctu/docker-compose.yml
@@ -67,6 +67,9 @@ services:
     volumes:
       - /eth:/eth
     command: [
+      "--rpc-host=0.0.0.0",
+      "--grpc-gateway-host=0.0.0.0",
+      "--monitoring-host=0.0.0.0",
       "--accept-terms-of-use",
       "--execution-endpoint=/eth/master/geth.ipc",
       "--datadir=/eth/cs/master"
