--- a/ctu/docker-compose.yml
+++ b/ctu/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   geth:
     image: ethereum/client-go
-    restart: unless-stopped
+    restart: no
     ports:
       - "30303:30303"
       - "30303:30303/udp"
