--- a/ctu/docker-compose.yml
+++ b/ctu/docker-compose.yml
@@ -53,7 +53,7 @@ services:
         max-file: "10"
   prysm:
     image: gcr.io/prysmaticlabs/prysm/beacon-chain:stable
-    restart: unless-stopped
+    restart: "no"
     ports:
       - "8545:8545"
       - "3500:3500"
