--- a/ctu-4/docker-compose.yml
+++ b/ctu-4/docker-compose.yml
@@ -70,6 +70,8 @@ services:
     command: [
       "--rpc-host=0.0.0.0",
       "--grpc-gateway-host=0.0.0.0",
+      "--grpc-gateway-port=3500",
+      "--grpc-gateway-corsdomain=http://localhost:4200,http://localhost:7500,http://127.0.0.1:4200,http://127.0.0.1:7500,http://0.0.0.0:4200,http://0.0.0.0:7500,http://localhost:3000,http://0.0.0.0:3000,http://127.0.0.1:3000",
       "--monitoring-host=0.0.0.0",
       "--p2p-tcp-port=13004",
       "--p2p-udp-port=12004",
