--- a/ctu-1/docker-compose.yml
+++ b/ctu-1/docker-compose.yml
@@ -71,6 +71,7 @@ services:
     volumes:
       - /eth:/eth
     command: [
+      "--p2p-host-ip=118.113.189.47",
       "--rpc-host=0.0.0.0",
       "--grpc-gateway-host=0.0.0.0",
       "--grpc-gateway-port=3500",
