--- a/ctu-1/docker-compose.yml
+++ b/ctu-1/docker-compose.yml
@@ -81,7 +81,9 @@ services:
       "--p2p-udp-port=12001",
       "--accept-terms-of-use",
       "--execution-endpoint=/eth/master/geth.ipc",
-      "--datadir=/eth/cs/master"
+      "--datadir=/eth/cs/master",
+      "--checkpoint-sync-url=https://beaconstate.ethstaker.cc",
+      "--genesis-beacon-api-url=https://beaconstate.ethstaker.cc"
     ]
     logging:
       driver: "json-file"
