--- a/bsc-3/docker-compose.yml
+++ b/bsc-3/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - --config
       - "/bsc/config.toml"
       - --datadir
-      - "/bsc"
+      - "/bsc/master"
       # Minimum number of executable transaction slots guaranteed per account (default: 16)
       # - --txpool.accountslots=16
       # Maximum number of non-executable transaction slots for all accounts (default: 1024)
