--- a/ctu-2/docker-compose.yml
+++ b/ctu-2/docker-compose.yml
@@ -68,6 +68,7 @@ services:
     volumes:
       - /eth:/eth
     command: [
+      "--p2p-host-ip=118.113.189.47",
       "--rpc-host=0.0.0.0",
       "--grpc-gateway-host=0.0.0.0",
       "--grpc-gateway-port=3500",
@@ -77,7 +78,8 @@ services:
       "--p2p-udp-port=12002",
       "--accept-terms-of-use",
       "--execution-endpoint=/eth/master/geth.ipc",
-      "--datadir=/eth/cs/master"
+      "--datadir=/eth/cs/master",
+      "--peer=/ip4/118.113.189.47/tcp/13004/p2p/16Uiu2HAmCrA4ttXefG3gLo17cAfLggp2NjKaLTfRCSF2TmRNTZy8"
     ]
     logging:
       driver: "json-file"
