--- a/ctu-2/docker-compose.yml
+++ b/ctu-2/docker-compose.yml
@@ -77,9 +77,11 @@ services:
       "--p2p-tcp-port=13002",
       "--p2p-udp-port=12002",
       "--accept-terms-of-use",
+      "--checkpoint-sync-url=https://beaconstate.ethstaker.cc",
+      "--genesis-beacon-api-url=https://beaconstate.ethstaker.cc",
       "--execution-endpoint=/eth/master/geth.ipc",
       "--datadir=/eth/cs/master",
-      "--peer=/ip4/110.184.174.10/tcp/13004/p2p/16Uiu2HAmCrA4ttXefG3gLo17cAfLggp2NjKaLTfRCSF2TmRNTZy8"
+      "--peer=/ip4/110.184.174.10/tcp/13004/p2p/16Uiu2HAmCrA4ttXefG3gLo17cAfLggp2NjKaLTfRCSF2TmRNTZy8",
     ]
     logging:
       driver: "json-file"
