--- a/ctu-4/docker-compose.yml
+++ b/ctu-4/docker-compose.yml
@@ -56,9 +56,9 @@ services:
   prysm:
     image: gcr.io/prysmaticlabs/prysm/beacon-chain:stable
     environment:
-      - http_proxy=http://127.0.0.1:7893
-      - https_proxy=http://127.0.0.1:7893
-      - all_proxy=socks5://127.0.0.1:7893
+      - http_proxy=http://host.docker.internal:7893
+      - https_proxy=http://host.docker.internal:7893
+      - all_proxy=socks5://host.docker.internal:7893
     ports:
       - "8545:8545"
       - "3500:3500"
