--- a/ctu-2/docker-compose.yml
+++ b/ctu-2/docker-compose.yml
@@ -54,7 +54,8 @@ services:
         max-file: "10"
   prysm:
     image: gcr.io/prysmaticlabs/prysm/beacon-chain:stable
-    restart: "no"
+    network_mode: "host"
+    restart: "always"
     ports:
       - "8545:8545"
       - "3500:3500"
@@ -80,6 +81,7 @@ services:
       "--execution-endpoint=/eth/master/geth.ipc",
       "--datadir=/eth/cs/master",
       "--peer=/ip4/110.184.174.10/tcp/13004/p2p/16Uiu2HAmCrA4ttXefG3gLo17cAfLggp2NjKaLTfRCSF2TmRNTZy8",
+      "--checkpoint-sync-url=https://mainnet-checkpoint-sync.stakely.io"
     ]
     logging:
       driver: "json-file"
